--- a/package.json
+++ b/package.json
@@ -10,16 +10,20 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
+    "@react-navigation/stack": "^6.3.29",
+    "@rneui/themed": "^4.0.0-rc.8",
     "expo": "~51.0.14",
     "expo-status-bar": "~1.12.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.74.2",
+    "react-native-gesture-handler": "^2.17.1",
     "react-native-gifted-charts": "^1.4.11",
     "react-native-linear-gradient": "^2.8.3",
-    "react-native-safe-area-context": "4.10.1",
+    "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "3.31.1"
   },
   "devDependencies": {
