--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -15,7 +15,12 @@
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
     "@rneui/themed": "^4.0.0-rc.8",
+    "axios": "^1.7.2",
     "expo": "~51.0.14",
+    "expo-camera": "~15.0.12",
+    "expo-dev-client": "~4.0.19",
+    "expo-file-system": "^17.0.1",
+    "expo-sqlite": "~14.0.4",
     "expo-status-bar": "~1.12.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
@@ -24,7 +29,8 @@
     "react-native-gifted-charts": "^1.4.11",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "^4.10.1",
-    "react-native-screens": "3.31.1"
+    "react-native-screens": "3.31.1",
+    "react-native-vision-camera": "^4.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
