--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.7.2",
     "expo": "~51.0.14",
     "expo-camera": "~15.0.12",
+    "expo-constants": "~16.0.2",
     "expo-dev-client": "~4.0.19",
     "expo-file-system": "^17.0.1",
     "expo-sqlite": "~14.0.4",
@@ -30,7 +31,8 @@
     "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "3.31.1",
-    "react-native-vision-camera": "^4.3.2"
+    "react-native-vision-camera": "^4.3.2",
+    "expo-secure-store": "~13.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
