--- a/package.json
+++ b/package.json
@@ -14,28 +14,35 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
+    "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
     "axios": "^1.7.2",
     "expo": "~51.0.14",
     "expo-camera": "~15.0.12",
     "expo-constants": "~16.0.2",
     "expo-dev-client": "~4.0.19",
+    "expo-document-picker": "~12.0.2",
     "expo-file-system": "^17.0.1",
+    "expo-image-manipulator": "~12.0.5",
+    "expo-navigation-bar": "~3.0.6",
+    "expo-secure-store": "~13.0.2",
+    "expo-sharing": "~12.0.1",
     "expo-sqlite": "~14.0.4",
     "expo-status-bar": "~1.12.1",
+    "jszip": "^3.10.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.74.2",
     "react-native-gesture-handler": "^2.17.1",
-    "react-native-gifted-charts": "^1.4.11",
+    "react-native-gifted-charts": "^1.4.14",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "3.31.1",
-    "react-native-vision-camera": "^4.3.2",
-    "expo-secure-store": "~13.0.2"
+    "react-native-svg": "15.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "react-native-svg-transformer": "^1.4.0",
     "tailwindcss": "^3.3.2"
   },
   "private": true
