--- a/package.json
+++ b/package.json
@@ -33,9 +33,11 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.74.2",
+    "react-native-draggable-flatlist": "^4.0.1",
     "react-native-gesture-handler": "^2.17.1",
     "react-native-gifted-charts": "^1.4.14",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-reanimated": "^3.10.0",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0"
