--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
     "axios": "^1.7.2",
+    "crypto-js": "^4.2.0",
     "expo": "~51.0.14",
+    "expo-asset": "^10.0.10",
     "expo-camera": "~15.0.12",
     "expo-constants": "~16.0.2",
     "expo-dev-client": "~4.0.19",
