--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "expo-sqlite": "~14.0.4",
     "expo-status-bar": "~1.12.1",
     "jszip": "^3.10.1",
+    "lodash": "^4.17.21",
+    "moment": "^2.30.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.74.2",
@@ -39,6 +41,7 @@
     "react-native-gesture-handler": "^2.17.1",
     "react-native-gifted-charts": "^1.4.14",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-popup-menu": "^0.16.1",
     "react-native-reanimated": "^3.10.0",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "3.31.1",
