--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-picker/picker": "2.7.5",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
@@ -18,9 +19,9 @@
     "@rneui/themed": "^4.0.0-rc.8",
     "axios": "^1.7.2",
     "crypto-js": "^4.2.0",
-    "expo": "~51.0.14",
+    "expo": "~51.0.17",
     "expo-asset": "^10.0.10",
-    "expo-camera": "~15.0.12",
+    "expo-camera": "~15.0.13",
     "expo-constants": "~16.0.2",
     "expo-dev-client": "~4.0.19",
     "expo-document-picker": "~12.0.2",
@@ -36,13 +37,13 @@
     "moment": "^2.30.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.74.2",
+    "react-native": "0.74.3",
     "react-native-draggable-flatlist": "^4.0.1",
-    "react-native-gesture-handler": "^2.17.1",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-gifted-charts": "^1.4.14",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-popup-menu": "^0.16.1",
-    "react-native-reanimated": "^3.10.0",
+    "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0"
