--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "expo-sharing": "~12.0.1",
     "expo-sqlite": "~14.0.4",
     "expo-status-bar": "~1.12.1",
+    "expo-updates": "~0.25.18",
     "jszip": "^3.10.1",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
