--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "3.31.1",
-    "react-native-svg": "15.2.0"
+    "react-native-svg": "^15.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
