--- a/app.json
+++ b/app.json
@@ -44,7 +44,7 @@
     "extra": {
       "eas": {
         "build": {
-          "releaseChannel": "default"
+          "releaseChannel": "preview"
         },
         "projectId": "06f32d72-676c-4abd-8e97-d871d53f31c4"
       }
