--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "expo-updates": "~0.25.18",
     "jszip": "^3.10.1",
     "lodash": "^4.17.21",
+    "lottie-react-native": "^7.0.0",
     "moment": "^2.30.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
@@ -49,7 +50,7 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "3.31.1",
-    "react-native-svg": "^15.3.0"
+    "react-native-svg": "^15.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
