--- a/package.json
+++ b/package.json
@@ -37,11 +37,11 @@
     "expo-updates": "~0.25.18",
     "jszip": "^3.10.1",
     "lodash": "^4.17.21",
-    "lottie-react-native": "^7.0.0",
     "moment": "^2.30.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.74.3",
+    "react-native-animated-nav-tab-bar": "^3.1.11",
     "react-native-draggable-flatlist": "^4.0.1",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-gifted-charts": "^1.4.14",
@@ -50,7 +50,8 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "3.31.1",
-    "react-native-svg": "^15.6.0"
+    "react-native-svg": "^15.6.0",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
