--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.74.3",
-    "react-native-animated-nav-tab-bar": "^3.1.11",
     "react-native-draggable-flatlist": "^4.0.1",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-gifted-charts": "^1.4.14",
@@ -50,8 +49,7 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "3.31.1",
-    "react-native-svg": "^15.6.0",
-    "styled-components": "^6.1.13"
+    "react-native-svg": "^15.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
